media/error_tc/error_263.txt
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_Qwphmm6.cpp: In function 'int main()':
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_Qwphmm6.cpp:8:1: error: expected ';' before '}' token
 }
 ^
